[gd_scene load_steps=3 format=3 uid="uid://bicqtiockvh3f"]

[ext_resource type="Script" path="res://OpeningMenu.gd" id="1_g00fo"]
[ext_resource type="FontFile" uid="uid://dhc0x3h50ovym" path="res://Non-Level_Scenes/GameEndFont.tres" id="2_nvfhn"]

[node name="OpeningMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g00fo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.379
anchor_top = 0.33
anchor_right = 0.621
anchor_bottom = 0.677
offset_left = 0.391998
offset_top = 0.159988
offset_right = -0.39209
offset_bottom = 0.303955
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_nvfhn")
theme_override_font_sizes/font_size = 30
text = "START"

[node name="InstructionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_nvfhn")
theme_override_font_sizes/font_size = 30
text = "INSTRUCTIONS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_nvfhn")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
